--- a/Help/Hadron-Changelog.html
+++ b/Help/Hadron-Changelog.html
@@ -11,15 +11,15 @@ p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Helvetica}
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
 span.s1 {text-decoration: underline}
-span.s2 {color: #2532e3}
-span.s3 {color: #1320f3}
-span.s4 {color: #3943cb}
-span.s5 {color: #3640cf}
-span.s6 {color: #2a36de}
-span.s7 {color: #3c46c7}
-span.s8 {color: #454cbb}
-span.s9 {color: #3e45a7}
-span.s10 {color: #434797}
+span.s2 {color: #2e3ad9}
+span.s3 {color: #202de8}
+span.s4 {color: #3f48c3}
+span.s5 {color: #3c46c7}
+span.s6 {color: #323dd4}
+span.s7 {color: #424abf}
+span.s8 {color: #4950b4}
+span.s9 {color: #4248a1}
+span.s10 {color: #454991}
 </style>
 </head>
 <body>
@@ -28,6 +28,9 @@ span.s10 {color: #434797}
 <p class="p3"><b>todo:</b></p>
 <p class="p3"><b>open docs in HrCodeSequencer should be saved</b></p>
 <p class="p3"><b>some code still runs after seq stop, gotta be fixed</b></p>
+<p class="p3"><b>a master group of a hadron instance would ne nice.</b></p>
+<p class="p3"><b>shift+d ile duplicate edilen kutularin size i siciyor</b></p>
+<p class="p2"><br></p>
 <p class="p3"><b>v1.6 (July 14, 2009)</b></p>
 <p class="p3"><span class="s1">other:</span></p>
 <p class="p3">* HadronPlugins <a href="SC://Quark"><span class="s2">Quark</span></a> is released with 2 plugins, <a href="../../HadronPlugins/Help/HrPresetMorph.html"><span class="s3">HrPresetMorph</span></a> and <a href="../../HadronPlugins/Help/HrCodeSequencer.html"><span class="s3">HrCodeSequencer</span></a>.</p>
